# labor-lens

./: .gitignore  Cargo.toml  IMPL-BACKLOG.md  README.md  README_PRODUCT_CONSISTENCY_REPORT.md  TBD.md
apps/: README.md
apps/laborlens-local-server/: Cargo.toml  README.md
apps/laborlens-local-ui/: README.md  index.html  package-lock.json  package.json  vite.config.ts
apps/laborlens-local-ui/src-tauri/: Cargo.toml  tauri.conf.json
apps/laborlens-local-ui/src-tauri/capabilities/: default.json
apps/laborlens-local-ui/src-tauri/src/: lib.rs  main.rs
apps/laborlens-rust/: Cargo.toml  README.md
crates/: README.md
db/migrations/: 0001_initial_postgresql_schema.sql
db/seeds/: 0001_demo_japanese_employees.sql
docs/: ACCEPTANCE-CRITERIA.md  ARCHITECTURE.md  BUSINESS-RULES.md  DATA-DESIGN.md  EXTERNAL-DESIGN.md  GLOSSARY.md  LEAN-SPEC-PLANNING.md  OPERATIONS.md  README.md  REPOSITORY-PLAN.md  REQUIREMENTS.md  TEST-PLAN.md  WORKFLOW.md
docs/adr/: 0001-PRODUCTION-REPO-BOUNDARY.md  README.md
docs/planning/: AGENT-PROGRESS-LOG.md  DB-INTERFACES.md  IMPLEMENTATION-PLAN.md  MIGRATION-FROM-PROTOTYPE.md  MODULE-REVIEW-2026-06-03.md  PROTOTYPE-EXECUTION-FINDINGS.md  REPOSITORY-PLAN.md  ROADMAP.md  WORKFLOW.md
docs/product/: ACCEPTANCE-CRITERIA.md  ARCHITECTURE.md  BUSINESS-RULES.md  DATA-DESIGN.md  EXTERNAL-DESIGN.md  GLOSSARY.md  (+6 more)
fixtures/: README.md
lean/: LaborLens.lean  README.md  lake-manifest.json  lakefile.lean
reports/: README.md
tools/: README.md  generate-scale-fixture.ps1  seed-demo-db.ps1  validate-db-schema.ps1  validate-repository-structure.ps1
(+67 files in other folders)
