[package]
name = "laborlens-local-ui"
version = "0.1.0"
description = "LaborLens local desktop shell"
authors = ["LaborLens"]
edition = "2021"

[workspace]

[lib]
name = "laborlens_local_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
